fix: Apply Webkit mask-image hack to fix border-radius overflow on hover

--- a/src/pages/OnBoarding/CreateAccount/CreateAccount.css
+++ b/src/pages/OnBoarding/CreateAccount/CreateAccount.css
@@ -14,6 +14,8 @@
      border-radius: 40px;
      overflow: hidden;
      transform: translateZ(0);
+     -webkit-mask-image: -webkit-radial-gradient(white, black);
+     isolation: isolate;
  }
 
  .signup-inner {
